set http input codec to 'json'

--- a/Elk/logstash/pipeline/logstash.conf
+++ b/Elk/logstash/pipeline/logstash.conf
@@ -3,8 +3,9 @@ input {
 		port => 5000
 	}
 	http {
-    port => 31311 
-  }
+		port => 31311
+		codec => json
+	}
 }
 
 ## Add your filters / logstash plugins configuration here
