--- a/Sample/HttpSink/HttpSink.csproj
+++ b/Sample/HttpSink/HttpSink.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Serilog.Sinks.Http" Version="4.0.0" />
+    <PackageReference Include="Serilog.Sinks.Http" Version="4.1.0-*" />
   </ItemGroup>
 
 </Project>
